<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.axxesinternational.vias.axxes.LevantamientoActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_giro"
        android:id="@+id/text_main"
        android:textSize="28dp"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_scan"
        android:id="@+id/btn_scan"
        android:layout_below="@+id/text_main"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txt_indicaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_busq_manual"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_scan" />

    <SearchView
        android:id="@+id/search_codB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@+id/txt_indicaciones" />


    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_pend"
        android:id="@+id/button_pend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onClickPendientes"
        android:layout_below="@+id/search_codB" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:layout_marginBottom="0dp"
        android:padding="5dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/user_footer"
            android:textColor="@color/text_footer"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/image_logo" />


    </LinearLayout>


</RelativeLayout>
